third_party/move/move-compiler-v2/tests/checking-lang-v2.2/primitive_match_range.exp

Diagnostics:
error: match over integers, booleans, or byte strings is not supported before language version 2.4-unstable
  ┌─ tests/checking-lang-v2.2/primitive_match_range.move:4:16
  │
4 │         match (x) {
  │                ^
